Added сchanges to the DifferTest, StylishFormatter